<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ShopTech</string>
    <string name="titulo_login">Bienvenido a ShopTech</string>
    <string name="hint_correo">Correo electrónico</string>
    <string name="hint_pass">Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="btn_huella">Ingresar con Huella</string>
    <string name="txt_olvido_pass">¿Olvidaste tu contraseña?</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_ingresar_admin">Probar ingreso como Administrador</string>
    <string name="txt_ingresar_vendedor">Probar ingreso como Vendedor</string>
    <string name="titulo_registro">Crear Cuenta</string>
    <string name="hint_nombre">Nombre completo</string>
    <string name="rol_comprador">Comprador</string>
    <string name="rol_vendedor">Vendedor</string>
    <string name="btn_crear_cuenta">Registrarse</string>
    <string name="txt_ya_tengo_cuenta">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="txt_crear_cuenta">¿No tienes cuenta? Regístrate aquí</string>
    <string name="titulo_recuperar">Recuperar Contraseña</string>
    <string name="txt_instrucciones_recuperar">Ingresa tu correo electrónico y te enviaremos un enlace para restablecer tu contraseña.</string>
    <string name="btn_enviar_enlace">Enviar Enlace</string>
    <string name="txt_volver_login_corto">Volver al Inicio de Sesión</string>
    <string name="titulo_nuevo_producto">Registrar Tecnología</string>
    <string name="btn_seleccionar_imagen">Cámara / Galería</string>
    <string name="hint_nombre_producto">Nombre del artículo (Ej: Laptop Gamer)</string>
    <string name="hint_descripcion_producto">Descripción de especificaciones básicas</string>
    <string name="hint_marca_producto">Marca (Ej: Lenovo, Samsung)</string>
    <string name="hint_modelo_producto">Modelo exacto</string>
    <string name="hint_sku_producto">Código SKU / Serial único</string>
    <string name="hint_categoria_producto">Categoría (Portátiles, Celulares, Accesorios)</string>
    <string name="hint_precio_producto">Precio de venta (COP)</string>
    <string name="hint_stock_producto">Cantidad inicial en stock</string>
    <string name="btn_guardar_producto">Subir al Inventario</string>
    <string name="titulo_admin">Panel de Administrador</string>
    <string name="btn_crear_producto_admin">Crear Nuevo Producto</string>
    <string name="btn_cerrar_sesion">Cerrar Sesión</string>
    <string name="titulo_editar">Editar Producto</string>
    <string name="btn_actualizar">Actualizar Datos</string>
    <string name="btn_eliminar">Eliminar Producto</string>
    <string name="titulo_catalogo">Catálogo ShopTech</string>
    <string name="btn_ver_carrito">Ver Carrito (0)</string>
    <string name="txt_salir">Salir</string>
</resources>