<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_oscuro"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_estandar"
        tools:context=".NuevoProductoActivity">

        <TextView
            android:id="@+id/tvTituloNuevoProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_corto"
            android:text="@string/titulo_nuevo_producto"
            android:textColor="@color/neon_azul"
            android:textSize="@dimen/text_size_titulo"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivPreviewProducto"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="@dimen/margin_medio"
            android:background="@color/gris_paneles"
            android:scaleType="centerCrop"
            android:src="@android:drawable/ic_menu_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTituloNuevoProducto"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btnSeleccionarImagen"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_muy_corto"
            android:text="@string/btn_seleccionar_imagen"
            android:textColor="@color/neon_verde"
            app:strokeColor="@color/neon_verde"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivPreviewProducto" />

        <EditText
            android:id="@+id/etNombreProducto"
            android:layout_width="0dp"
            android:layout_height="@dimen/alto_input"
            android:layout_marginTop="@dimen/margin_medio"
            android:backgroundTint="@color/neon_azul"
            android:hint="@string/hint_nombre_producto"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/texto_secundario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSeleccionarImagen" />

        <EditText
            android:id="@+id/etDescripcionProducto"
            android:layout_width="0dp"
            android:layout_height="@dimen/alto_input"
            android:layout_marginTop="@dimen/margin_corto"
            android:backgroundTint="@color/neon_azul"
            android:hint="@string/hint_descripcion_producto"
            android:inputType="textLongMessage"
            android:textColor="@color/white"
            android:textColorHint="@color/texto_secundario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNombreProducto" />

        <EditText
            android:id="@+id/etMarcaProducto"
            android:layout_width="0dp"
            android:layout_height="@dimen/alto_input"
            android:layout_marginTop="@dimen/margin_corto"
            android:backgroundTint="@color/neon_azul"
            android:hint="@string/hint_marca_producto"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/texto_secundario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDescripcionProducto" />

        <EditText
            android:id="@+id/etModeloProducto"
            android:layout_width="0dp"
            android:layout_height="@dimen/alto_input"
            android:layout_marginTop="@dimen/margin_corto"
            android:backgroundTint="@color/neon_azul"
            android:hint="@string/hint_modelo_producto"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/texto_secundario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etMarcaProducto" />

        <EditText
            android:id="@+id/etSkuProducto"
            android:layout_width="0dp"
            android:layout_height="@dimen/alto_input"
            android:layout_marginTop="@dimen/margin_corto"
            android:backgroundTint="@color/neon_azul"
            android:hint="@string/hint_sku_producto"
            android:inputType="textCapCharacters"
            android:textColor="@color/white"
            android:textColorHint="@color/texto_secundario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etModeloProducto" />

        <EditText
            android:id="@+id/etCategoriaProducto"
            android:layout_width="0dp"
            android:layout_height="@dimen/alto_input"
            android:layout_marginTop="@dimen/margin_corto"
            android:backgroundTint="@color/neon_azul"
            android:hint="@string/hint_categoria_producto"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/texto_secundario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSkuProducto" />

        <EditText
            android:id="@+id/etPrecioProducto"
            android:layout_width="0dp"
            android:layout_height="@dimen/alto_input"
            android:layout_marginTop="@dimen/margin_corto"
            android:backgroundTint="@color/neon_azul"
            android:hint="@string/hint_precio_producto"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/texto_secundario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCategoriaProducto" />

        <EditText
            android:id="@+id/etStockProducto"
            android:layout_width="0dp"
            android:layout_height="@dimen/alto_input"
            android:layout_marginTop="@dimen/margin_corto"
            android:backgroundTint="@color/neon_azul"
            android:hint="@string/hint_stock_producto"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/texto_secundario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPrecioProducto" />

        <Button
            android:id="@+id/btnGuardarProducto"
            android:layout_width="0dp"
            android:layout_height="@dimen/alto_boton"
            android:layout_marginTop="@dimen/margin_largo"
            android:layout_marginBottom="@dimen/margin_corto"
            android:backgroundTint="@color/neon_fucsia"
            android:text="@string/btn_guardar_producto"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_boton"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etStockProducto" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>