<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_oscuro"
    android:padding="24dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvBienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/titulo_login"
        android:textColor="@color/neon_azul"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/neon_azul"
        android:hint="@string/hint_correo"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/texto_secundario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBienvenido" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/neon_azul"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/texto_secundario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCorreo" />

    <TextView
        android:id="@+id/tvOlvidoPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_olvido_pass"
        android:textColor="@color/neon_azul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPass" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/neon_fucsia"
        android:text="@string/btn_ingresar"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOlvidoPass" />

    <Button
        android:id="@+id/btnHuella"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_huella"
        android:textColor="@color/neon_verde"
        app:strokeColor="@color/neon_verde"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresar" />
    <TextView
        android:id="@+id/tvIngresarAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Probar ingreso como Administrador"
        android:textColor="@color/texto_secundario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHuella" />
    <TextView
        android:id="@+id/tvIngresarVendedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Probar ingreso como Vendedor"
        android:textColor="@color/texto_secundario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIngresarAdmin" />
</androidx.constraintlayout.widget.ConstraintLayout>