<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_oscuro"
    android:padding="@dimen/padding_estandar"
    tools:context=".AdminDashboardActivity">

    <TextView
        android:id="@+id/tvTituloAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/titulo_admin"
        android:textColor="@color/neon_azul"
        android:textSize="@dimen/text_size_titulo"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProductosAdmin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnIrNuevoProducto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloAdmin"
        tools:listitem="@layout/item_producto" />

    <Button
        android:id="@+id/btnIrNuevoProducto"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/neon_fucsia"
        android:text="@string/btn_crear_producto_admin"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_boton"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnCerrarSesionAdmin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCerrarSesionAdmin"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_cerrar_sesion"
        android:textColor="@color/neon_verde"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/neon_verde" />

    <Button
        android:id="@+id/btnIrAGestionUsuarios"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:layout_margin="80dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/neon_azul"
        android:text="Gestionar Usuarios"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>